--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,3 +11,12 @@
   &:hover {background-color: $color-blue-400; }
   &:active {background-color: $color-blue-600; }
 }
+
+
+.btn-text {
+  display: inline-block;
+  height: 4.8rem;
+  line-height: 4.8rem;
+  padding: 0 1rem;
+  color: $color-blue-500;
+}
