--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,14 @@
 header {
+  display: flex;
+  margin-top: 5.2rem;
+  justify-content: center;
+
   nav {
     a {
       margin-right: 8rem;
+    }
+    a.btn-text {
+      margin-right: 0.8rem;
     }
   }
 }
