style: added pill

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -17,6 +17,7 @@ $color-grey-100: #f8fefc;
 @import './components/button';
 @import './components/type';
 @import './components/header';
+@import './components/pill';
 
 
 html {
