--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,25 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,500&display=swap');
 
-$color-green-500: #00c2a9;
-$color-green-100: #e5f9ed;
-
-$color-blue-600: #0468da;
-$color-blue-500: #0077ff;
-$color-blue-400: #3391fb;
-$color-blue-100: #e7f1ff;
-
-$color-grey-900: #031b4e;
-$color-grey-500: #657393;
-$color-grey-100: #f8fefc;
-
 
 @import './reset';
+@import './variables';
 @import './components/button';
 @import './components/type';
 @import './components/header';
 @import './components/pill';
+@import './components/cards';
 
 
 html {
   font-size: 10px;
+}
+
+.wrapper {
+  max-width: 120rem;
+  margin: auto;
 }
